hw tasks2 less12